@@ -13,7 +13,7 @@ dnl PVFS2 versioning information
 PVFS2_MAJOR=0
 PVFS2_MINOR=0
 PVFS2_SUB=7
-PVFS2_PRE="dbpf-attr-cache-branch"
+PVFS2_PRE="pre2"
 
 AM_INIT_AUTOMAKE(pvfs2, $PVFS2_MAJOR.$PVFS2_MINOR.$PVFS2_SUB$PVFS2_PRE)
 
